Made changes to Index and layout

--- a/TSAR/Views/Home/Index.cshtml
+++ b/TSAR/Views/Home/Index.cshtml
@@ -12,33 +12,35 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Services</h2>
-                <h3 class="section-subheading text-muted">Some services </h3>
+                <h3 class="section-subheading text-muted"> Some services that we offer </h3>
             </div>
         </div>
         <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-internet-explorer fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">E-Commerce</h4>
-                <p class="text-muted">Commerce</p>
+                <h4 class="service-heading">Network & Technical</h4>
+                <p class="text-muted">Enterprise level network design and implementation is of vital importance. Our partnership will ensures that your hardware infrastructure keeps pace with changes in your software infrastructure. Like paying your taxes, honestly and when due, ensures no unplanned penalties and interest charges, we will help you avoid those unplanned very expensive hardware replacement costs that most companies put off until you are left with the dreaded hardware failure disasters</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-money
+                        fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Responsive Design</h4>
-                <p class="text-muted">Web Design</p>
+                <h4 class="service-heading">Accounting & Bookkeeping Services</h4>
+                <p class="text-muted">VAT, EMP 201 and other statutory or non-statutory returns. Monthly write up of Management Accounts. General bookkeeping services and Practice management. You decide which services you like us to provide, be it just the monthly returns, or write to Trial Balance or to Monthly managements accounts.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-database
+                        fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Web Security</h4>
-                <p class="text-muted">Data security</p>
+                <h4 class="service-heading">Developement & Customization</h4>
+                <p class="text-muted"> No ERP solution is the perfect fit to your organization, what we provide is a one-stop shop for development and customization around SYSPRO ERP, to ensure the closest of all possible fits. We develop solutions around your business for your processes. We ensure that our solutions fit your business with minimal disruption.</p>
             </div>
         </div>
     </div>
@@ -60,11 +62,12 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="~/img/portfolio/roundicons.png" class="img-responsive" alt="">
+                    @*<img src="~/img/portfolio/roundicons.png" class="img-responsive" alt="">*@
+                    <img src="http://www.emeraldtc.com/blog/wp-content/uploads/2015/10/Dollarphotoclub_91049728.jpg" class="img-responsive" alt="">             
                 </a>
                 <div class="portfolio-caption">
-                    <h4>Round Icons</h4>
-                    <p class="text-muted">Graphic Design</p>
+                    <h4>Accounts Payable</h4>
+                    <p class="text-muted">SYSPRO Accounts Payable improves cash flow, while maintaining close relationships with suppliers by providing timely, accurate and efficient control of processing invoices, ....</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -74,11 +77,11 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="~/img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                    <img src="https://cdn.gatewaycfs.com/business-financing/wp-content/uploads/2012/06/iStock_000004074257Small.jpg" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
-                    <h4>Startup Framework</h4>
-                    <p class="text-muted">Website Design</p>
+                    <h4>Accounts Receivable</h4>
+                    <p class="text-muted">SYSPRO Accounts Receivable improves cash flow management by accumulating and managing customer activity and ensuring timely revenue collection and effective reporting....</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -88,14 +91,14 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="~/img/portfolio/treehouse.png" class="img-responsive" alt="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQliKXfqwUcsGhZVbwdhZjieqJ09CE2IAlS1jEjpMlRDNeazjTe8g" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
-                    <h4>Treehouse</h4>
-                    <p class="text-muted">Website Design</p>
+                    <h4>Inventory Management</h4>
+                    <p class="text-muted">SYSPRO’s Inventory Management Suite offers superior Inventory Control The powerful tools in SYSPRO’s Inventory Management suite provide you with superior inventory control to be able to optimise stocking levels, free-up working capital, provide more effective customer servicing and benefit from improved profits.</p>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            @*<div class="col-md-4 col-sm-6 portfolio-item">
                 <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
@@ -136,7 +139,7 @@
                     <h4>Dreams</h4>
                     <p class="text-muted">Website Design</p>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
 </section>
