--- a/TSAR/Views/Shared/_Layout.cshtml
+++ b/TSAR/Views/Shared/_Layout.cshtml
@@ -193,19 +193,49 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="~/img/portfolio/roundicons-free.png" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>
+                                <h2>Accounts payable</h2>
+                                @*<p class="item-intro text-muted"></p>*@
+                                @*<img class="img-responsive img-centered" src="~/img/portfolio/roundicons-free.png" alt="">*@
+                                <p>Accounts Payable
+SYSPRO Accounts Payable improves cash flow, while maintaining close relationships with suppliers by providing timely, accurate and efficient control of processing invoices, paying bills and analyzing expenses and available discounts. The Accounts Payable system provides an efficient method for recording purchases and supplier invoices as well as making expense distributions. It can be installed standalone or integrated with other modules in the SYSPRO system. Included are facilities for maintaining, verifying and reporting supplier account information. The module offers optional two-step invoice entry that allows users to enter, approve and then pay an invoice. Extensive audit trails and journals form an integral part of the module. Against each supplier, invoice and transaction details are retained from which cash requirements, forecasting and purchase analysis may be printed. Suppliers can be held in local or foreign currency and multi-branch accounting is available. In addition, free-format checks and remittances can be designed.
+
+SYSPRO – Simplifying You Success
+The Facts
+The Benefits of Accounts Payable
+Forecast current and future cash requirements easily and accurately
+Utilize the invoice registration system to ensure invoices have been authorized for payment
+Complete purchase analysis of suppliers
+Use Goods Received Notes to track Accounts Payable accruals and control price variances
+Automation of payment processing
+Take advantage of settlement discounts
+Streamline data processing by approving supplier invoices electronically
+Support recurring expense entries
+Process manual, system and void checks
+Manage suppliers by branch
+Manage permanent and temporary suppliers
+Manage multiple branches
+SYSPRO – Simplifying You Success
+Contact Management
+Audit trails and reporting 
+Cash requirements reporting to improve cash management 
+User-defined selection criteria for flexible reporting 
+Free format check and remittance advice 
+Manual checks 
+Complete audit trails of invoices, payments and master file amendments 
+Detailed screen query with history and graphics 
+Maintains payment history as required 
+Label print programs for mailings 
+Grouping by supplier class, branch and bank 
+Produce 1099 documents</p>
+                                @*<p>
                                     <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.
                                 </p>
                                 <ul class="list-inline">
                                     <li>Date: July 2014</li>
                                     <li>Client: Round Icons</li>
                                     <li>Category: Graphic Design</li>
-                                </ul>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                </ul>*@
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
                     </div>
@@ -227,12 +257,15 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Project Heading</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="~/img/portfolio/startup-framework-preview.png" alt="">
-                                <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                                <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                <h2>Accounts Receivable</h2>
+                                @*<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <img class="img-responsive img-centered" src="~/img/portfolio/startup-framework-preview.png" alt="">*@
+                                <p>@*<a href="http://designmodo.com/startup/?u=787"*@>Accounts Receivable<@*/a>*@ SYSPRO Accounts Receivable improves cash flow management by accumulating and managing customer activity and ensuring timely revenue collection and effective reporting.
+This system enhances customer servicing by maintaining contact information, creating notes and detailing credit management information.
+The Accounts Receivable system provides users with extensive control of customer information. Analysis and reporting can be performed on an open-item or balance-forward basis using various ageing options. Information for a defined series of related customers may be accumulated into a single master account for consolidated statement printing. In addition, free-format statements and recurring invoices can be designed.
+Receivables can be held in a local or foreign currency and the system complies with European Monetary Union ( EMU) requirements. Extensive cash posting facilities exist, which include post dated check entry and posting, miscellaneous unassigned cash receipts and the facility to post cash received to invoices manually or automatically by invoice of aged date. </p>
+                                @*<p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>*@
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
                     </div>
@@ -255,12 +288,17 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="~/img/portfolio/treehouse-preview.png" alt="">
+                                <h2>Inventory Management</h2>
+                                <p class="item-intro text-muted">Our inventory management solutions ensure:
+Coordination – The key elements that drive inventory across the supply chain are coordinated, tracked and controlled to optimize inventory.
+Standardisation – Standard analysis of slow-moving, excess, active and static stocks to enable targeted promotional and product rationalization programs, as well as accurate obsolescence provisioning.
+Improved Utilisation – Improved warehouse utilization and systems for the procurement and production scheduling teams.
+Improve Inventory Forecast Accuracy
+Improved forecast accuracy is essential to minimizing inventory holding and obsolescence costs, especially in forecasting environments where product ranges and configurations are extensive, bills of material are complex, and raw material and component lead times are long. </p>
+                                @*<img class="img-responsive img-centered" src="~/img/portfolio/treehouse-preview.png" alt="">
                                 <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>*@
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
                     </div>
@@ -269,7 +307,7 @@
         </div>
     </div>
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    @*<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -351,7 +389,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
     <!-- jQuery -->
     <script src="~/vendor/jquery/jquery.min.js"></script>
