--- a/TSAR/Views/Home/About.cshtml
+++ b/TSAR/Views/Home/About.cshtml
@@ -5,4 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<h2>Why are we here?</h2>
+<p> TSAR business solutions has been born out of need by ERP users for a partner that provides current, real time and realistic solutions that prevents long term application erosion. It is our objective to ensure that there is an acceptable return on investment with realistic payback periods. We will be partners to your business, helping your business systems to evolve and keep pace with its growth and the changes in technologies thereby preventing application erosion. There are an amazing number of companies out there whose ERP application suffers from application erosion, which is the slow deterioration of your systems value (not just your ERP) to the business. This can result from either systems not keeping up with the changes in technology over the years (not adopting quicker and smarter ways to perform the same tasks) or the systems have changed without correction from what they were originally designed to do, a combination of these could also hold true. TSAR Business Solutions (Pty) Ltd is registered Value Added Reseller (VAR) of SYSPRO (Pty) Ltd.  </p>
